k8s/kind/deployment.yaml
# helpdesk-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helpdesk-db
  template:
    metadata:
      labels:
        app: helpdesk-db
    spec:
      containers:
      - name: helpdesk-db
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: helpdesk-db
spec:
  selector:
    app: helpdesk-db
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433

---
# helpdesk-log.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helpdesk-log
  template:
    metadata:
      labels:
        app: helpdesk-log
    spec:
      containers:
      - name: helpdesk-log
        image: datalust/seq:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helpdesk-log
spec:
  selector:
    app: helpdesk-log
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
# helpdesk-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helpdesk-api
  template:
    metadata:
      labels:
        app: helpdesk-api
    spec:
      containers:
      - name: helpdesk-api
        image: bfecchio/helpdesk-apiservice-api:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: pfx-volume
          mountPath: /root/.aspnet/https
          readOnly: true
      volumes:
      - name: pfx-volume
        secret:
          secretName: pfx-secret
          items:
          - key: helpdesk.pfx
            path: helpdesk.pfx
---
apiVersion: v1
kind: Service
metadata:
  name: helpdesk-api
spec:
  selector:
    app: helpdesk-api
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443  

---
# helpdesk-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helpdesk-web
  template:
    metadata:
      labels:
        app: helpdesk-web
    spec:
      containers:
      - name: helpdesk-web
        image: bfecchio/helpdesk-appservice-web:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: pfx-volume
          mountPath: /root/.aspnet/https
          readOnly: true
      volumes:
      - name: pfx-volume
        secret:
          secretName: pfx-secret
          items:
          - key: helpdesk.pfx
            path: helpdesk.pfx
---
apiVersion: v1
kind: Service
metadata:
  name: helpdesk-web
spec:
  selector:
    app: helpdesk-web
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443

---
# helpdesk-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk-ingress-http
spec:
  ingressClassName: nginx
  rules:
  - host: logs.helpdesk.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helpdesk-log
            port:
              number: 80
              
---
# helpdesk-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk-ingress-https
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.helpdesk.127.0.0.1.nip.io
    - app.helpdesk.127.0.0.1.nip.io
    secretName: tls-secret    
  rules:
  - host: api.helpdesk.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helpdesk-api
            port:
              number: 443
  - host: app.helpdesk.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helpdesk-web
            port:
              number: 443
